# libicd-wireguard

./: Makefile.am  configure.ac
debian/: changelog  control  libicd-network-wireguard.install  libicd-provider-wireguard.install  libicd-tor-dev.install  rules
etc/: Makefile.am  libicd-network-wireguard.schemas  libicd-provider-wireguard.schemas
src/: Makefile.am  dbus_wireguard.c  dbus_wireguard.h  libicd_network_wireguard.c  libicd_network_wireguard.h  libicd_network_wireguard_dbus.c  libicd_network_wireguard_helpers.c  libicd_network_wireguard_netlink.c  libicd_provider_wireguard.c  libicd_wireguard.h  libicd_wireguard_config.c  libicd_wireguard_shared.h
